--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,30 +14,36 @@ name = "counter"
 required-features = ["counter"]
 
 [dependencies]
-anyhow = { version = "1.0.62", optional = true }
-bincode = { version = "1.3.3", optional = true }
+anyhow = { version = "1.0.62" }
+bincode = { version = "1.3.3" }
 bytes = "1.10.1"
 base64 = { version = "0.22.1", optional = true }
 cid = "0.11.1"
-clap = { version = "4.5.40", features = ["derive"], optional = true }
+clap = { version = "4.5.40", features = ["derive"] }
 const-hex = "1.14.1"
 crc = "3.3.0"
 fnv = "1.0.7"
 indexmap = "2.10.0"
-indicatif = { version = "0.18.0", optional = true }
+indicatif = { version = "0.18.0" }
 multihash = "0.19.3"
-prost = { version = "0.11.9", optional = true }
-serde = { version = "1.0.219", optional = true }
-serde_json = { version = "1.0.140", optional = true }
+prost = { version = "0.11.9" }
+serde = { version = "1.0.219" }
+serde_json = { version = "1.0.140" }
 serde_cbor = "0.11.2"
-solana-sdk = { version = "~2.2.2", optional = true }
-solana-storage-proto = { version = "~2.2.19", optional = true }
-solana-transaction-status = { version = "~2.2.19", optional = true }
+solana-sdk = { version = "~2.2.2" }
+solana-storage-proto = { version = "~2.2.19" }
+solana-transaction-status = { version = "~2.2.19" }
 thiserror = "2.0.11"
 tokio = { version = "1.46.1", features = ["full"] }
-zstd = { version = "0.13.3", optional = true }
-rayon = { version = "1.10.0", optional = true }
+zstd = { version = "0.13.3" }
+rayon = { version = "1.10.0" }
 memchr = "2.7"
+aho-corasick = "1.1"
+arrow = "53.0"
+arrow-array = "53.0"
+arrow-schema = "53.0"
+parquet = "53.0"
+bs58 = "0.5"
 
 [dev-dependencies]
 const-hex = "1.14.1"
