--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,9 @@ clone_on_ref_ptr = "deny"
 missing_const_for_fn = "deny"
 trivially_copy_pass_by_ref = "deny"
 
+[patch.crates-io]
+chrono = { version = "=0.4.31" }
+
 [profile.release]
 lto = true
 codegen-units = 1
