--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ solana-transaction-status = { version = "~2.2.19" }
 thiserror = "2.0.11"
 tokio = { version = "1.46.1", features = ["full"] }
 zstd = { version = "0.13.3" }
-rayon = { version = "1.10.0" }
+rayon = "1.10.0"
 memchr = "2.7"
 aho-corasick = "1.1"
 arrow = "53.0"
@@ -44,6 +44,7 @@ arrow-array = "53.0"
 arrow-schema = "53.0"
 parquet = "53.0"
 bs58 = "0.5"
+chrono = "=0.4.30"
 
 [dev-dependencies]
 const-hex = "1.14.1"
@@ -61,9 +62,6 @@ timing = []
 clone_on_ref_ptr = "deny"
 missing_const_for_fn = "deny"
 trivially_copy_pass_by_ref = "deny"
-
-[patch.crates-io]
-chrono = { version = "=0.4.30" }
 
 [profile.release]
 lto = true
