--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,9 +41,13 @@ memchr = "2.7"
 aho-corasick = "1.1"
 arrow-array = "53.0"
 arrow-schema = "53.0"
-parquet = "53.0"
+parquet = { version = "53.0", features = ["zstd"] }
 bs58 = "0.5"
 chrono = "=0.4.41"
+tikv-jemallocator = "0.6"
+reqwest = { version = "0.12", features = ["stream", "rustls-tls"] }
+tokio-util = { version = "0.7", features = ["io"] }
+futures-util = "0.3"
 
 [dev-dependencies]
 const-hex = "1.14.1"
